--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   permission_handler: ^8.0.0+2
   pin_code_fields: ^7.3.0
   flare_flutter: ^3.0.2
+  csc_picker: ^0.2.6
+  font_awesome_flutter: ^9.2.0
+  image_picker: ^0.8.4+4
+  cached_network_image: ^3.1.0
+  gender_picker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +76,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/icons/
     - assets/verify.png
     - assets/otp.flr
     - assets/otp.gif
