--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
   image_picker: ^0.8.4+4
   cached_network_image: ^3.1.0
   gender_picker: ^1.1.0
+  convex_bottom_bar: ^3.0.0
+  location: ^4.3.0
+  geolocator: ^8.0.1
+  geocoding: 
 
 dev_dependencies:
   flutter_test:
