--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   permission_handler: ^8.0.0+2
   pin_code_fields: ^7.3.0
   flare_flutter: ^3.0.2
+  firebase_core: ^1.12.0
+  firebase_auth: ^3.3.7
 
 dev_dependencies:
   flutter_test:
